fixed overlapping entre le bouton crée un post et le profile utilisateur

--- a/MVC/public/assets/styles/computer/barre_de_recherche.css
+++ b/MVC/public/assets/styles/computer/barre_de_recherche.css
@@ -1,7 +1,7 @@
 #DivBarreRecherche {
     display: flex;
     align-items: center;
-    margin-right: 75px;
+    margin-right: 40px;
     background-size: contain;
     background-color: white;
     border-style: solid;
